--- a/InstaFeed.html
+++ b/InstaFeed.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Instagram Feed</title>
+	<title>Scripted Pixels' Instagram Feed</title>
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
