--- a/ThumbGallery.html
+++ b/ThumbGallery.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Image gallery with Thumbnails</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<title>Scripted Pixels' Image gallery with Thumbnails</title>
+
+	<link rel="stylesheet" href="css/reset.css">
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
@@ -11,7 +14,8 @@
 			font-weight: lighter;
 			font-size: 16px;
 			background: #dc4600;
-			padding-top: 50px;
+			padding: 50px 0 0 0;
+			margin: 0 auto;
 		}
 			a {
 				color: #f0f0f0;
@@ -21,8 +25,11 @@
 			clear: both;
 			display: block;
 			margin: 0 auto;
-			max-width: 1024px;
+			width: 100%;
+			min-width: 320px;
+			max-width: 600px;
 			position: relative;
+			text-align: center;
 		}
 		/* ANIMATION TRANSITION IF NEEDED */
 			.animate {
@@ -33,50 +40,62 @@
 				transition: all 0.35s ease-in-out;
 			}
 		.PreviewImageContainer {
-		    display: inline-block;
-		    height: 460px;
-		    position: relative;
-		    text-align: center;
-		    width: 330px;
+		    display: block;
+		    height: auto;
 		    margin: 0 auto;
+		    position: relative;
+		    min-width: 300px;
+		    max-width: 90%;
 		    border: solid thin #fb6c29;
-		    padding: 0 10px;
+		    padding: 0 1rem;
 		}
+			/* -------------- SIZE 480 to 768 ----------------- */
+		    @media only screen and (min-width: 700px) {
+			    .PreviewImageContainer {
+			    	margin: 0 2rem;
+			    }
+		    }
+		    /* -------------- SIZE 480 to 768 ----------------- */
+		        @media only screen and (min-width: 700px) {
+		        }
+		        /* -------------- SIZE 480 to 768 ----------------- */
+		            @media only screen and (min-width: 700px) {
+		            }
+
 			.LargePreviewImageContainer {
 				margin-top: 10px;
 			}
 				.LargePreviewImageContainer, .LargePreviewImageContainer .og-fullimg {
 				    display: inline-block;
-				    height: 330px;
+				    height: auto;
+				    width: 100%;
 				    text-align: center;
 				}
 					.LargePreviewImageContainer .og-fullimg img {
 					    height: 100%;
 					    margin: 0 auto;
 					    max-height: 100%;
-					    max-width: 100%;
-					    width: auto;
+					    width: 100%;
 					}
 			.SmallPreviewImageContainer {
-			    bottom: -5px;
+			    bottom: -1%;
 			    display: inline-block;
 			    height: auto;
 			    left: 0;
-			    margin: 0;
-			    position: absolute;
+			    position: relative;
 			    text-align: center;
 			    width: 100%;
-			    margin-bottom: 10px;
+			    margin: 10px auto;
 			}
 				.SmallPreviewImageContainer .SmallImage {
+					display: inline-block;
 				    height: auto;
-				    margin: 0 5px;
-				    max-width: 100px;
-				    min-height: 73px;
+				    margin: 0 1.5%;
+				    width: 29%;
 				}
 				.SmallPreviewImageContainer .thumb {
-				    max-width: 100px;
-				    min-height: 73px;
+				    width: 100%;
+				    height: auto;
 				}
 
 	</style>
@@ -87,18 +106,18 @@
 		<div class="PreviewImageContainer">
 			<div class="LargePreviewImageContainer">
 				<div class="og-fullimg">
-					<img src="images/1.jpg" alt="" >
+					<img src="images/1Big.jpg" alt="" >
 				</div>
 			</div>
 
 			<div class="SmallPreviewImageContainer">
-				<a class="SmallImage" rel="images/1.jpg" href="#">
+				<a class="SmallImage" rel="images/1Big.jpg" href="#">
 					<img class="thumb" src="images/1.jpg">
 				</a>
-				<a class="SmallImage" rel="images/2.jpg" href="#">
+				<a class="SmallImage" rel="images/2Big.jpg" href="#">
 					<img class="thumb" src="images/2.jpg">
 				</a>
-				<a class="SmallImage" rel="images/3.jpg" href="#">
+				<a class="SmallImage" rel="images/3Big.jpg" href="#">
 					<img class="thumb" src="images/3.jpg">
 				</a>
 			</div>
@@ -132,7 +151,6 @@
 				return false;
 				// Done!
 			});
-
 		});
 	</script>
 </body>
