--- a/drawLine.html
+++ b/drawLine.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Draw a line</title>
+	<title>Scripted Pixels' Draw a line</title>
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
