--- a/parallax.html
+++ b/parallax.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Square to Round</title>
+	<title>Scripted Pixels' Parrallax</title>
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
