--- a/text-shadow.html
+++ b/text-shadow.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>text shadows</title>
+	<title>Scripted Pixels' text shadows</title>
 	
 	<style type="text/css">
 
