--- a/twoInOneButton.html
+++ b/twoInOneButton.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Two-in-one button</title>
+	<title>Scripted Pixels' Two-in-one button</title>
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
