Not too sure what I've added now but it's all good stuff!

--- a/SquareRound.html
+++ b/SquareRound.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Scripted Pixels' Square to Round</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
 			text-align:center;
 			font-family:helvetica;
 			font-size: 16px;
-			background: #f0f0f0;
+			background: #FA4E06;
 			padding-top: 200px;
 		}
 			a {
