--- a/ThumbGallery.html
+++ b/ThumbGallery.html
@@ -13,7 +13,7 @@
 			font-family:'Helvetica Neue';
 			font-weight: lighter;
 			font-size: 16px;
-			background: #dc4600;
+			background: #FA4E06;
 			padding: 50px 0 0 0;
 			margin: 0 auto;
 		}
