--- a/ThumbGalleryGrid.html
+++ b/ThumbGalleryGrid.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Scripted Pixels' Image gallery with Thumbnails</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
@@ -10,8 +13,10 @@
 			font-family:'Helvetica Neue';
 			font-weight: lighter;
 			font-size: 16px;
-			background: #dc4600;
+			background: #FA4E06;
 			padding-top: 50px;
+			max-width: 600px;
+			margin: 0 auto;
 		}
 			a {
 				color: #f0f0f0;
@@ -83,7 +88,7 @@
 			}
 
 			.og-expander-inner {
-				padding: 20px 30px 50px;
+				padding: 10px 20px;
 				height: 100%;
 			}
 
@@ -122,7 +127,7 @@
 
 			.og-fullimg,
 			.og-details {
-				width: 50%;
+				width: 100%;
 				height: 100%;
 				overflow: hidden;
 				position: relative;
@@ -131,7 +136,6 @@
 				width: 100%;
 			}
 			.og-details {
-				float: right;
 				padding: 0;
 			}
 
@@ -146,43 +150,35 @@
 			}
 
 			.og-details h3 {
+				font-size: 30px;
 				font-weight: 300;
-				font-size: 52px;
-				padding: 40px 0 10px;
-				margin-bottom: 10px;
-				margin-top: 0;
+				padding: 10px 0;
 			}
-
-			.og-details p {
-				font-weight: 400;
-				font-size: 16px;
-				line-height: 22px;
-				color: #999;
-			}
-
-			.og-details a {
-				font-weight: 700;
-				font-size: 16px;
-				color: #333;
-				text-transform: uppercase;
-				letter-spacing: 2px;
-				padding: 10px 20px;
-				border: 3px solid #333;
-				display: inline-block;
-				margin: 30px 0 0;
-				outline: none;
-			}
-
-			.og-details a::before {
-				content: '\2192';
-				display: inline-block;
-				margin-right: 10px;
-			}
-
-			.og-details a:hover {
-				border-color: #999;
-				color: #999;
-			}
+				.og-details p {
+					font-weight: 400;
+					font-size: 16px;
+					line-height: 22px;
+					color: #999;
+				}
+				.og-details a {
+					font-weight: 700;
+					font-size: 16px;
+					color: #333;
+					text-transform: uppercase;
+					letter-spacing: 2px;
+					padding: 10px 20px;
+					border: 3px solid #333;
+					display: inline-block;
+					margin: 30px 0 0;
+					outline: none;
+				}.og-details a::before {
+					content: '\2192';
+					display: inline-block;
+					margin-right: 10px;
+				}.og-details a:hover {
+					border-color: #999;
+					color: #999;
+				}
 
 			.og-loading {
 				width: 20px;
@@ -221,20 +217,26 @@
 		.PreviewImageContainer {
 			float: left;
 		    display: inline-block;
-		    height: 460px;
+		    height: auto;
 		    position: relative;
 		    text-align: center;
-		    width: 330px;
+		    width: 100%;
 		    margin: 0 auto;
 		    padding: 0 10px;
 		}
+			iframe {
+				width: 100%;
+				height: auto;
+				display: none;
+			}
 			.LargePreviewImageContainer {
 				margin-top: 10px;
 			}
 				.LargePreviewImageContainer, .LargePreviewImageContainer .og-fullimg {
 				    display: inline-block;
-				    height: 330px;
+				    height: auto;
 				    text-align: center;
+				    width: 100%;
 				}
 					.LargePreviewImageContainer .og-fullimg img {
 					    height: 100%;
@@ -244,33 +246,32 @@
 					    width: auto;
 					}
 			.SmallPreviewImageContainer {
-			    bottom: -5px;
+			    bottom: 0;
 			    display: inline-block;
 			    height: auto;
 			    left: 0;
 			    margin: 0;
-			    position: absolute;
+			    position: relative;
 			    text-align: center;
 			    width: 100%;
-			    margin-bottom: 10px;
 			}
 				.SmallPreviewImageContainer .SmallImage {
 					display: inline-block;
-					float: left;
 				    height: auto;
-				    margin: 0 15px 0 0;
+				    margin: 0 1% 0;
+				    width: 32%;
 				    max-width: 100px;
 				    min-height: 73px;
 				}
 					.SmallPreviewImageContainer .SmallImage:first-child{
-						margin-left: 10px;
+						margin-left: 0;
 					}
 					.SmallPreviewImageContainer .SmallImage:last-child{
 						margin-right: 0;
 					}
 				.SmallPreviewImageContainer .thumb {
-				    max-width: 100px;
-				    min-height: 73px;
+				    width: 100%;
+				    height: auto;
 				}
 
 	</style>
@@ -291,7 +292,7 @@
 					data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu."  - PREIEW DESCRIPTION TEXT
 					>
 				-->
-				<a href="http://www.scriptedpixels.co.uk/blog" data-thumb-1="images/1.jpg" data-thumb-2="images/2.jpg" data-thumb-3="images/3.jpg" data-largesrc="images/2.jpg" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+				<a href="http://www.scriptedpixels.co.uk/blog" data-video="//www.youtube.com/embed/DMOOLd_44Mo" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
 					<img src="images/2.jpg" alt="img02"/>
 				</a>
 			</li>
