--- a/parallax.html
+++ b/parallax.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Scripted Pixels' Parrallax</title>
 	<style type="text/css">
 		/* setup the very basis for the document */
@@ -9,7 +11,7 @@
 			text-align:center;
 			font-family:helvetica;
 			font-size: 16px;
-			background: #f0f0f0;
+			background: #FA4E06;
 			padding-top: 50px;
 		}
 			a {
