--- a/shadowMove.html
+++ b/shadowMove.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Scripted Pixels' Shadow movement</title>
 	<style type="text/css">
 		/* setup the very basis for the document */
@@ -10,7 +12,7 @@
 			font-family:'Helvetica Neue';
 			font-weight: lighter;
 			font-size: 16px;
-			background: #dc4600;
+			background: #FA4E06;
 			padding-top: 50px;
 		}
 			a {
