--- a/twoInOneButton.html
+++ b/twoInOneButton.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Scripted Pixels' Two-in-one button</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<style type="text/css">
 		/* setup the very basis for the document */
 		body {
@@ -10,8 +13,11 @@
 			font-family:'Helvetica Neue';
 			font-weight: lighter;
 			font-size: 16px;
-			background: #e7e7e7;
-			padding-top: 50px;
+			background: #FA4E06;
+			padding: 50px 10px;
+			min-width: 320px;
+			max-width: 500px;
+			margin: 0 auto;
 		}
 			a {
 				color: #f0f0f0;
@@ -34,37 +40,38 @@
 			transition: all 0.35s ease-out;
 		}
 		.SlidingDown {
-			width: 500px;
-			min-height: 60px;
+			width: 100%;
+			min-height: 70px;
 			display: block;
 			margin: 0 auto;
 			overflow: hidden;
 			border: 1px solid rgba(255, 255, 255,1);
 		}
+			.SlidingDown:first-child {
+				border-bottom: none;
+			}
 			.content {
 				display: block;
 				overflow: hidden;
 				height: 0;
 			}
 				.content.open {
-					min-height: 100px;
+					min-height: 340px;
 				}
 			.content p {
-				width: 95%;
-				margin:0 auto;
-				text-align: left;
-				margin: 10px 5px;
-				display: inline-block;
+				width: 90%;
+				margin: 0 auto;
+				display: block;
 			} 
 		.buttonWrap {
 			margin: 0 auto;
 			width: 100%;
-			height: 60px;
+			height: 70px;
 		}
 		.buttonWrap h3 {
-			margin: 15px 10px 0;
+			margin: 20px 10px 0;
 			text-align: left;
-			width: 420px;
+			width: 70%;
 			float: left;
 			font-weight: 100;
 			font-size: 25px;
@@ -80,7 +87,7 @@
 				position: relative;
 				line-height: 36px;
 				cursor: pointer;
-				margin: 5px 5px 0 0;
+				margin: 10px 10px 0 0;
 				display: inline-block;
 			}
 				.buttonWrap .button.open {
