--- a/backgroundColor.html
+++ b/backgroundColor.html
@@ -1,1 +1,141 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<title>Scripted Pixels' Image gallery with Thumbnails</title>
+
+	<link rel="stylesheet" href="css/reset.css">
+	<style type="text/css">
+		/* setup the very basis for the document */
+		body {
+			text-align:center;
+			font-family:'Helvetica Neue';
+			font-weight: lighter;
+			font-size: 16px;
+			background: #FA4E06;
+			padding: 50px 0 0 0;
+			margin: 0 auto;
+		}
+			a {
+				color: #f0f0f0;
+				text-decoration: none;
+			}
+		.container {
+			clear: both;
+			display: block;
+			margin: 0 auto;
+			width: 100%;
+			min-width: 320px;
+			/*max-width: 600px;*/
+			position: relative;
+			text-align: center;
+		}
+		/* ANIMATION TRANSITION IF NEEDED */
+			.animate {
+				-webkit-transition: all 0.35s ease-in-out;
+				-moz-transition: all 0.35s ease-in-out;
+				-ms-transition: all 0.35s ease-in-out;
+				-o-transition: all 0.35s ease-in-out;
+				transition: all 0.35s ease-in-out;
+			}
+		h1 {
+			text-align: center;
+			margin: 0 auto 2rem;
+		}
+		/* IMAGES */
+		.img-wrap{
+		  border-bottom: 1px solid #FA4E06;
+		  text-align: center;
+		  position: relative;
+		  height: 400px;
+		  width: 100%;
+		  float: left;
+		  margin: 0;
+		}
+		.img-wrap img{
+		  height: 100%;
+		}
+		.img-wrap .setColor {
+			background: rgba(0,0,0,0.5);
+			letter-spacing: 2px;
+			position: absolute;
+			font-size: 1.5rem;
+			font-weight: bold;
+			padding: 1rem;
+			left: 1rem;
+			top: 1rem;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h1>Adaptive background color</h1>
+		<div class='img-wrap'>
+		  <img id="img" src="images/4.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/5.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/6.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/7.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/8.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/9.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/10.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/11.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/12.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+
+		<div class='img-wrap'>
+		  <img id="img" src="images/13.jpg" data-adaptive-background='1'>
+		  <span class="setColor"></span>
+		</div>
+	</div> <!-- container -->
+
+	<!-- jQuery libraries -->
+		<script src="js/jquery-1.10.2.min.js"></script>
+		<script src="js/detectmobilebrowser.js"></script>
+		<script src="js/jquery.easing.1.3.js"></script>
+		<!-- TOUCH EVENTS -->
+		<script src="js/jquery.tappable.js"></script>
+		<script src="js/jquery.adaptive-background.js"></script>
+
+
+	<!-- Let's do stuff when the Doc is ready, shall we -->
+	<script>
+		$(document).ready(function(){
+			$.adaptiveBackground.run();
+		});
+	</script>
+</body>
+</html>
