--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
                         <img src="images/doublemenu.png" alt="" />
                     </a>
                 </li>
+                <li>                    
+                    <a href="backgroundColor.html">
+                        <p class="title">Adaptive backrgound color</p>
+                        <img src="images/adaptiveBgColor.jpg" alt="" />
+                    </a>
+                </li>
                 <!-- <li>
                     <p class="title">CSS Animation</p>
                 </li>
