Tidying up code
html and css tidy up - removed silly mistakes :|

--- a/ThumbGalleryGrid.html
+++ b/ThumbGalleryGrid.html
@@ -214,7 +214,7 @@
 			}
 
 		/* IMAGE GALLERY */
-		.PreviewImageContainer {
+		.previewImageContainer {
 			float: left;
 		    display: inline-block;
 		    height: auto;
@@ -229,23 +229,23 @@
 				height: auto;
 				display: none;
 			}
-			.LargePreviewImageContainer {
+			.largepreviewImageContainer {
 				margin-top: 10px;
 			}
-				.LargePreviewImageContainer, .LargePreviewImageContainer .og-fullimg {
+				.largepreviewImageContainer, .largepreviewImageContainer .og-fullimg {
 				    display: inline-block;
 				    height: auto;
 				    text-align: center;
 				    width: 100%;
 				}
-					.LargePreviewImageContainer .og-fullimg img {
+					.largepreviewImageContainer .og-fullimg img {
 					    height: 100%;
 					    margin: 0 auto;
 					    max-height: 100%;
 					    max-width: 100%;
 					    width: auto;
 					}
-			.SmallPreviewImageContainer {
+			.smallpreviewImageContainer {
 			    bottom: 0;
 			    display: inline-block;
 			    height: auto;
@@ -255,7 +255,7 @@
 			    text-align: center;
 			    width: 100%;
 			}
-				.SmallPreviewImageContainer .SmallImage {
+				.smallpreviewImageContainer .smallImage {
 					display: inline-block;
 				    height: auto;
 				    margin: 0 1% 0;
@@ -263,13 +263,13 @@
 				    max-width: 100px;
 				    min-height: 73px;
 				}
-					.SmallPreviewImageContainer .SmallImage:first-child{
+					.smallpreviewImageContainer .smallImage:first-child{
 						margin-left: 0;
 					}
-					.SmallPreviewImageContainer .SmallImage:last-child{
+					.smallpreviewImageContainer .smallImage:last-child{
 						margin-right: 0;
 					}
-				.SmallPreviewImageContainer .thumb {
+				.smallpreviewImageContainer .thumb {
 				    width: 100%;
 				    height: auto;
 				}
@@ -292,7 +292,7 @@
 					data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu."  - PREIEW DESCRIPTION TEXT
 					>
 				-->
-				<a href="http://www.scriptedpixels.co.uk/blog" data-video="//www.youtube.com/embed/DMOOLd_44Mo" data-title="Veggies sunt bona vobis" data-description="Komatsuna prairie turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
+				<a href="http://www.scriptedpixels.co.uk/blog" data-video="//www.youtube.com/embed/DMOOLd_44Mo" data-title="Veggies sunt bona vobis" data-description="<a href='http:////www.google.com'>Komatsuna prairie</a> turnip wattle seed artichoke mustard horseradish taro rutabaga ricebean carrot black-eyed pea turnip greens beetroot yarrow watercress kombu.">
 					<img src="images/2.jpg" alt="img02"/>
 				</a>
 			</li>
