--- a/checkboxes.html
+++ b/checkboxes.html
@@ -110,14 +110,14 @@
 </head>
 <body>
 
-    <article class="container">
+    <div class="container">
         <section>
             <form>
                 <input type="checkbox" checked="checked" class="checkbox" id="customCheckbox" />
                 <label class="checkboxLabel" for="customCheckbox" >Click me</label>
             </form>
         </section>
-    </article>
+    </div>
 
     <!-- jQuery libraries -->
         <script src="js/jquery-1.10.2.min.js"></script>
