--- a/drawLine.html
+++ b/drawLine.html
@@ -28,7 +28,7 @@
 			position: relative;
 		}
 		/* ANIMATIONS */
-		.Object, .ObjectContainer a {
+		.object, .objectContainer a {
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
 			-ms-transition: all 0.35s ease-in-out;
@@ -107,104 +107,7 @@
 			transform-origin: 0 100%;
 			height: 3px; /* Line width of 3 */
 			background: #000; /* Black fill */
-		}
-		/*.animate-0-25-a {
-			-webkit-transform: rotate(90deg);
-			-moz-transform: rotate(90deg);
-			-o-transform: rotate(90deg);
-			-ms-transform: rotate(90deg);
-			transform: rotate(90deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}
-		.animate-0-25-b {
-			-webkit-transform: rotate(-90deg);
-			-moz-transform: rotate(-90deg);
-			-o-transform: rotate(-90deg);
-			-ms-transform: rotate(-90deg);
-			transform: rotate(-90deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}
-		.animate-25-50-a {
-			-webkit-transform: rotate(180deg);
-			-moz-transform: rotate(180deg);
-			-o-transform: rotate(180deg);
-			-ms-transform: rotate(180deg);
-			transform: rotate(180deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}
-		.animate-25-50-b {
-			-webkit-transform: rotate(-90deg);
-			-moz-transform: rotate(-90deg);
-			-o-transform: rotate(-90deg);
-			-ms-transform: rotate(-90deg);
-			transform: rotate(-90deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}
-		.animate-50-75-a {
-			-webkit-transform: rotate(270deg);
-			-moz-transform: rotate(270deg);
-			-o-transform: rotate(270deg);
-			-ms-transform: rotate(270deg);
-			transform: rotate(270deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}
-		.animate-50-75-b {
-			-webkit-transform: rotate(-90deg);
-			-moz-transform: rotate(-90deg);
-			-o-transform: rotate(-90deg);
-			-ms-transform: rotate(-90deg);
-			transform: rotate(-90deg);
-			-webkit-transform-origin:100% 100%;
-			-moz-transform-origin:100% 100%;
-			-o-transform-origin:100% 100%;
-			-ms-transform-origin:100% 100%;
-			transform-origin:100% 100%;
-		}
-		.animate-75-100-a {
-			-webkit-transform: rotate(0deg);
-			-moz-transform: rotate(0deg);
-			-o-transform: rotate(0deg);
-			-ms-transform: rotate(0deg);
-			transform: rotate(0deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}
-		.animate-75-100-b {
-			-webkit-transform: rotate(-90deg);
-			-moz-transform: rotate(-90deg);
-			-o-transform: rotate(-90deg);
-			-ms-transform: rotate(-90deg);
-			transform: rotate(-90deg);
-			-webkit-transform-origin: 100% 100%;
-			-moz-transform-origin: 100% 100%;
-			-o-transform-origin: 100% 100%;
-			-ms-transform-origin: 100% 100%;
-			transform-origin: 100% 100%;
-		}*/
-		
+		}		
 	</style>
 </head>
 <body>
@@ -239,8 +142,8 @@
 		</div>
 	</div>
 
-	<div class="QOverlay">
-	<div class="QLoader"></div>
+	<div class="qOverlay">
+		<div class="qLoader"></div>
 	</div>
 
 	<!-- jQuery library (served from Google) -->
