--- a/drawers.html
+++ b/drawers.html
@@ -110,7 +110,7 @@
 </head>
 <body>
 
-    <article class="container">
+    <div class="container">
         <section>
             <ol>
                 <li class="open">
@@ -142,7 +142,7 @@
                 </li>
             </ol>
         </section>
-    </article>
+    </div>
 
     <!-- jQuery libraries -->
         <script src="js/jquery-1.10.2.min.js"></script>
