--- a/hiddensearch.html
+++ b/hiddensearch.html
@@ -131,7 +131,7 @@
 </head>
 <body>
 
-    <article class="container">
+    <div class="container">
         <section>
             <form id="search">
                 <label>Search</label>
@@ -139,7 +139,7 @@
                 <button type="submit" class="searchButton">Go</button>
             </form>
         </section>
-    </article>
+    </div>
 
     <!-- jQuery libraries -->
         <script src="js/jquery-1.10.2.min.js"></script>
