--- a/shadowMove.html
+++ b/shadowMove.html
@@ -28,7 +28,7 @@
 			position: relative;
 		}
 		/* ANIMATIONS */
-		.Object, .ObjectContainer a, .loader-bg {
+		.object, .objectContainer a, .loader-bg {
 			-webkit-transition: all 0.2s ease-in-out;
 			-moz-transition: all 0.2s ease-in-out;
 			-ms-transition: all 0.2s ease-in-out;
