--- a/text-shadow.html
+++ b/text-shadow.html
@@ -9,7 +9,10 @@
 	<style type="text/css">
 
 	/* setup the very basis for the document */
-	body { text-align:center; font-family:helvetica; }
+	body {
+		text-align:center;
+		font-family:helvetica;
+	}
 
 	/* text-shadow works by setting the offset on vertical and horizontal 
 	levels ( 1px / -1px ) for the shadow and then you set the blur level in 
