--- a/InstaFeed.html
+++ b/InstaFeed.html
@@ -35,22 +35,63 @@
 			-o-transition: all 0.35s ease-in-out;
 			transition: all 0.35s ease-in-out;
 		}
-		.yobeatSCinstagramwidget {width: 255px; height: 360px; background: black; position:relative;}
+		.yobeatSCinstagramwidget {
+			width: 255px;
+			height: 360px;
+			background: black;
+			position:relative;
+		}
 
-		.SC-IG-SCROLLER {width: 250px; height: 295px; position:relative; overflow:hidden; }
-		.SC-IG-SCROLLER .items {width: 200000em; position: absolute;}
-		.SC-IG-SCROLLER .item {width:245px;height:250px; margin-right:10px; float:left;}
-		.SC-instagram-image {width: 237px; height: 237px; margin-left: 9px;}
-		.yobeatSCinstagramwidget a h2 {color: white; font-family: Helvetica; font-weight: bold; font-size: 16px; text-align:right; position: absolute; right: 10px; bottom: 10px;}
-		h3.ig-count {color: white;}
-		.yobeatSCinstagramwidget h3 {color: white; font-family: Helvetica; font-weight: bold; font-size: 12px; text-decoration: none;}
+		.sc-ig-scroller {
+			width: 250px;
+			height: 295px;
+			position:relative;
+			overflow:hidden;
+		}
+		.sc-ig-scroller .items {
+			width: 200000em;
+			position: absolute;
+		}
+		.sc-ig-scroller .item {
+			width:245px;
+			height:250px;
+			margin-right:10px;
+			float:left;
+		}
+		.SC-instagram-image {
+			width: 237px;
+			height: 237px;
+			margin-left: 9px;
+		}
+		.yobeatSCinstagramwidget a h2 {
+			color: white;
+			font-family: Helvetica;
+			font-weight: bold;
+			font-size: 16px;
+			text-align:right;
+			position: absolute;
+			right: 10px;
+			bottom: 10px;
+		}
+		h3.ig-count {
+			color: white;
+		}
+		.yobeatSCinstagramwidget h3 {
+			color: white; 
+			font-family: Helvetica; 
+			font-weight: bold; 
+			font-size: 12px; 
+			text-decoration: none;
+		}
 		span.counts {
-		float: left;
-		width: 50px;
-		margin-left: 9px;
-		line-height: 1px;}
-		.counts img {float: left;
-		margin-top: 7px;
+			float: left;
+			width: 50px;
+			margin-left: 9px;
+			line-height: 1px;
+		}
+		.counts img {
+			float: left;
+			margin-top: 7px;
 		}
 		h3.scusername {margin-left:10px;font-size: 10px; line-height:0px;margin-bottom:1px;}
 	</style>
@@ -60,10 +101,10 @@
 		<div class="yobeatSCinstagramwidget">
 			<a href="http://instagram.com/skullcandy">
 				<img src="images/skullcandyad_01.jpg">
-				<div class="SC-IG-SCROLLER">
+				<div class="sc-ig-scroller">
 					<div class="items">
 					</div><!--items-->
-				</div><!--SC-IG-SCROLLER-->
+				</div><!--sc-ig-scroller-->
 			</a>
 			<a href="http://instagram.com/skullcandy"><h2>#Skullcandysnow</h2></a>
 		</div><!--yobeatSCinstagramwidget-->
