--- a/SquareRound.html
+++ b/SquareRound.html
@@ -26,26 +26,26 @@
 			width: 200px;
 		}
 		/* ANIMATIONS */
-		.Object, .ObjectContainer a {
+		.object, .objectContainer a {
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
 			-ms-transition: all 0.35s ease-in-out;
 			-o-transition: all 0.35s ease-in-out;
 			transition: all 0.35s ease-in-out;
 		}
-		.ObjectContainer {
+		.objectContainer {
 			width: 200px;
 			height: 200px;
 			float: left;
 			display: block;
 			position: relative;
 		}
-			.ObjectContainer .Object {
+			.objectContainer .object {
 				display: block;
 				width: 100%;
 				height: 100%;
 			}
-			.ObjectContainer a {
+			.objectContainer a {
 				position: absolute;
 				bottom: -200px;
 				left: 0;
@@ -56,7 +56,7 @@
 				vertical-align: middle;
 			}
 
-		.ObjectContainer:hover .Object {
+		.objectContainer:hover .object {
 			margin: 2.5%;
 			height: 95%;
 			width: 95%;
@@ -67,7 +67,7 @@
 			-o-transform: rotate(100deg);
 			transform: rotate(100deg);
 		}
-			.ObjectContainer:hover a {
+			.objectContainer:hover a {
 				opacity: 1;
 				bottom: 0;
 			}
@@ -76,14 +76,14 @@
 		#noRotate {
 			overflow: hidden;
 		}
-			#noRotate .ObjectContainer:hover .Object {
+			#noRotate .objectContainer:hover .object {
 				-webkit-transform: rotate(0deg);
 				-moz-transform: rotate(0deg);
 				-ms-transform: rotate(0deg);
 				-o-transform: rotate(0deg);
 				transform: rotate(0deg);
 			}
-		#smallRotate .ObjectContainer:hover .Object.lessRadi {
+		#smallRotate .objectContainer:hover .object.lessRadi {
 			-webkit-transform: rotate(90deg);
 			-moz-transform: rotate(90deg);
 			-ms-transform: rotate(90deg);
@@ -93,38 +93,38 @@
 		}
 
 
-		#red.Object {
+		#red.object {
 			background: #e7222f;
 		}
-		#brown.Object {
+		#brown.object {
 			background: #796959;
 		}
-		#dGrey.Object {
+		#dGrey.object {
 			background: #363635;
 		}
-		#Grey.Object {
+		#Grey.object {
 			background: #6f6f6e;
 		}
 	</style>
 </head>
 <body>
 	<div class="container">
-		<div class="ObjectContainer">
-			<div id="red" class="Object"></div>
+		<div class="objectContainer">
+			<div id="red" class="object"></div>
 			<a href="#" >A link </a>
 		</div>		
 	</div>
 
 	<div id="noRotate" class="container">
-		<div class="ObjectContainer">
-			<div id="dGrey" class="Object"></div>
+		<div class="objectContainer">
+			<div id="dGrey" class="object"></div>
 			<a href="#" >A link </a>
 		</div>
 	</div>
 
 	<div id="smallRotate" class="container">
-		<div class="ObjectContainer">
-			<div id="red" class="Object lessRadi"></div>
+		<div class="objectContainer">
+			<div id="red" class="object lessRadi"></div>
 			<a href="#" >A link </a>
 		</div>
 	</div>
