--- a/circleload.html
+++ b/circleload.html
@@ -29,7 +29,7 @@
 			position: relative;
 		}
 		/* ANIMATIONS */
-		.Object, .ObjectContainer a {
+		.object, .objectContainer a {
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
 			-ms-transition: all 0.35s ease-in-out;
