--- a/doublemenu.html
+++ b/doublemenu.html
@@ -87,7 +87,7 @@
 </head>
 <body>
 
-    <article class="container">
+    <div class="container">
         <div id="mobile_menu" >
             <a href="#" id="mobileMenuButton" >Menu</a>
             <div id="menu">
@@ -111,7 +111,7 @@
                 </ul>
             </div>
         </div>
-    </article>
+    </div>
 
     <!-- jQuery libraries -->
         <script src="js/jquery-1.10.2.min.js"></script>
