--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h1>Scripted Pixels' Playground</h1>
     </header>
 
-    <article class="container">
+    <div class="container">
         <!-- INTRO -->
         <section>
             <h2>What's this page about!?</h2>
@@ -271,7 +271,7 @@
                 </li> -->
             </ol>
         </section>
-    </article>
+    </div>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
