--- a/parallax.html
+++ b/parallax.html
@@ -27,14 +27,14 @@
 			position: relative;
 		}
 		/* ANIMATIONS */
-		.Object, .ObjectContainer a {
+		.object, .objectContainer a {
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
 			-ms-transition: all 0.35s ease-in-out;
 			-o-transition: all 0.35s ease-in-out;
 			transition: all 0.35s ease-in-out;
 		}
-		.ObjectContainer {
+		.objectContainer {
 			width: 200px;
 			height: 200px;
 			display: block;
@@ -42,12 +42,12 @@
 			top: 0;
 			left: 0;
 		}
-			.ObjectContainer .Object {
+			.objectContainer .object {
 				display: block;
 				width: 100%;
 				height: 100%;
 			}
-				.ObjectContainer:hover .Object {
+				.objectContainer:hover .object {
 					margin: 2.5%;
 					height: 95%;
 					width: 95%;
@@ -58,7 +58,7 @@
 					-o-transform: rotate(100deg);
 					transform: rotate(100deg);
 				}
-			.ObjectContainer a {
+			.objectContainer a {
 				position: absolute;
 				bottom: -200px;
 				left: 0;
@@ -68,31 +68,31 @@
 				text-align: center;
 				vertical-align: middle;
 			}
-				.ObjectContainer:hover a {
+				.objectContainer:hover a {
 					opacity: 1;
 					bottom: 0;
 				}
 		/* LOCATIONS */
-		.ObjectContainer.first {
+		.objectContainer.first {
 			top: 200px;
 			left: 100px;
 		}
-		.ObjectContainer.second {
+		.objectContainer.second {
 			top: 600px;
 			left: 350px;
 		}
 
 		/* COLORS */
-		#red.Object {
+		#red.object {
 			background: #e7222f;
 		}
-		#brown.Object {
+		#brown.object {
 			background: #796959;
 		}
-		#dGrey.Object {
+		#dGrey.object {
 			background: #363635;
 		}
-		#Grey.Object {
+		#Grey.object {
 			background: #6f6f6e;
 		}
 	</style>
@@ -100,13 +100,13 @@
 <body>
 	<div class="container">
 
-		<div class="ObjectContainer first">
-			<div id="red" class="Object"></div>
+		<div class="objectContainer first">
+			<div id="red" class="object"></div>
 			<a href="#" >A link </a>
 		</div>
 
-		<div class="ObjectContainer second">
-			<div id="brown" class="Object"></div>
+		<div class="objectContainer second">
+			<div id="brown" class="object"></div>
 			<a href="#" >A link </a>
 		</div>
 
