--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <section>
             <ol>
                 <li>
-                    <a href="DoubleNavsliding.html">
+                    <a href="doubleNavSliding.html">
                         <p class="title">Double Slide-out/in navigaton</p>
                         <img src="images/doubleslidingnav.png" alt="" />
                     </a>
@@ -194,13 +194,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="ThumbGallery.html">
+                    <a href="thumbGallery.html">
                         <p class="title">Mini thumbnail gallery</p>
                         <img src="images/thumbnailgridgallery.png" alt="" />
                     </a>
                 </li>
                 <li>
-                    <a href="ThumbGalleryGrid.html">
+                    <a href="thumbGalleryGrid.html">
                         <p class="title">Expanding thumbnail grid</p>
                     </a>
                     <div class='embed-container'><iframe src='//instagram.com/p/g6ZBNqo6gi/embed/' frameborder='0' scrolling='no' allowtransparency='true'></iframe></div>
@@ -260,7 +260,7 @@
                     <p class="title">Instagram feed</p>
                 </li> -->
                 <li>
-                    <a href="SquareRound.html">
+                    <a href="squareRound.html">
                         <p class="title">On hover CSS transition</p>
                         <img src="images/SquareRound.png" alt="" />
                     </a>
