font size fix up

--- a/index.html
+++ b/index.html
@@ -45,17 +45,15 @@
                 width: 100%;
             }
             h1 {
-                font-size: 20px;
-                font-size: 2rem;
+                font-size: 30px;
+                font-size: 3rem;
             }
             h2 {
-                font-size: 15px;
-                font-size: 1.5rem;
+                font-size: 25px;
+                font-size: 2.5rem;
                 margin: 0 auto 1rem;
             }
             p {
-                font-size: 11px;
-                font-size: 1.1rem;
                 margin: 0 auto 1rem;
                 letter-spacing: 0.1rem;
             }
@@ -67,7 +65,7 @@
                 }
                 ol li p,
                 ol li a p {
-                    font-size: 1.3rem;
+                    font-size: 1.8rem;
                 }
             ol {
                 text-align: center;
@@ -182,6 +180,12 @@
         <section>
             <ol>
                 <li>
+                    <a href="sass.html">
+                        <p class="title">Sass snippets</p>
+                        <img src="images/sass.png" alt="" />
+                    </a>
+                </li>
+                <li>
                     <a href="doubleNavSliding.html">
                         <p class="title">Double Slide-out/in navigaton</p>
                         <img src="images/doubleslidingnav.png" alt="" />
@@ -248,9 +252,6 @@
                     </a>
                 </li>
                 <!-- <li>
-                    <p class="title">CSS Animation</p>
-                </li>
-                <li>
                     <p class="title">iOS 7 Blur</p>
                 </li>
                 <li>
