--- a/angularJsInstagramFeed.html
+++ b/angularJsInstagramFeed.html
@@ -162,6 +162,7 @@
                     left: 0;
                     background: rgba(255,255,255,0.8);
                     font-weight: 200;
+                    font-size: 14px;
                     padding: 10px 10px 20px;
                     text-align: center;
                     color: #000;
@@ -224,7 +225,7 @@
         }
             ul.list li span {
                 left: 5%;
-                top: 45%;
+                top: 25%;
             }
          
         ul li span:after {
